@@ -35,6 +35,7 @@ int init_queue(unsigned int size);
 void enqueue(event_t *e);
 event_t *dequeue(int peek);
 void increase_queue_depth(unsigned int size);
+int queue_length(void);
 void destroy_queue(void);
 
 #endif
